--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "keep-react": "^1.5.0",
+    "next": "14.2.15",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-intersection-observer": "^9.13.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "postcss": "^8",
