--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "keep-react": "^1.5.0",
     "next": "14.2.15",
     "phosphor-react": "^1.4.1",
