--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "sharp": "^0.33.5",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "postcss": "^8",
