--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "crypto-js": "^4.2.0",
     "keep-react": "^1.5.0",
     "next": "14.2.15",
     "phosphor-react": "^1.4.1",
@@ -19,6 +20,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "sharp": "^0.33.5",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.14",
     "yarn": "^1.22.22"
   },
